[package]
name = "torseed"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bendy = "0.3"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
humantime = "2"
percent-encoding = "2"
hex = "0.4"
rand = "0.8"
data-encoding = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "gzip", "brotli", "deflate"] }
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
url = "2"
